SERVER-76835 Avoid blocking on PBWM and admission control tickets on the sharding metadata refresh path